[gd_scene load_steps=7 format=3 uid="uid://i3pf445i7qp8"]

[ext_resource type="Script" uid="uid://d1m7mj85xran2" path="res://main.gd" id="1_0xm2m"]
[ext_resource type="PackedScene" uid="uid://docs8xbbyc615" path="res://BoardParts/PlayerHand/player_hand.tscn" id="1_ig7tw"]
[ext_resource type="Texture2D" uid="uid://bexwjtfox12au" path="res://assets/UI/arrow_right.png" id="2_h2yge"]
[ext_resource type="PackedScene" uid="uid://c0h5bfvxg47gp" path="res://UI/Icons/icon.tscn" id="3_lquwl"]
[ext_resource type="PackedScene" uid="uid://ds7jatgbi07fv" path="res://BoardParts/ZoomArea/plan_zoom.tscn" id="4_1bvp3"]
[ext_resource type="Texture2D" uid="uid://ccwja3gvw6swa" path="res://assets/icons/clans/vorace.png" id="4_7mycd"]

[node name="Main" type="Node2D"]
script = ExtResource("1_0xm2m")

[node name="DevUILayer" type="CanvasLayer" parent="."]

[node name="HBoxContainer" type="HBoxContainer" parent="DevUILayer"]
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -192.5
offset_top = -64.0
offset_right = 192.5
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="PreviousPlayerButton" type="TextureButton" parent="DevUILayer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
texture_normal = ExtResource("2_h2yge")
flip_h = true

[node name="CurrentPlayerLabel" type="Label" parent="DevUILayer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Regulkar Player"

[node name="NextPlayerButton" type="TextureButton" parent="DevUILayer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
texture_normal = ExtResource("2_h2yge")

[node name="MarginContainer" type="MarginContainer" parent="DevUILayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="Panel" type="Panel" parent="DevUILayer"]
offset_left = 167.0
offset_top = 132.0
offset_right = 408.0
offset_bottom = 364.0

[node name="Icon" parent="DevUILayer/Panel" instance=ExtResource("3_lquwl")]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="DevUILayer"]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("4_7mycd")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Screen" type="VBoxContainer" parent="CanvasLayer/MarginContainer"]
layout_mode = 2

[node name="Top" type="HBoxContainer" parent="CanvasLayer/MarginContainer/Screen"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Board" type="Control" parent="CanvasLayer/MarginContainer/Screen/Top"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SelectedItems" type="VBoxContainer" parent="CanvasLayer/MarginContainer/Screen/Top"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 10

[node name="PlanHover" parent="CanvasLayer/MarginContainer/Screen/Top/SelectedItems" instance=ExtResource("4_1bvp3")]
unique_name_in_owner = true
layout_mode = 2

[node name="Control" type="Control" parent="CanvasLayer/MarginContainer/Screen/Top/SelectedItems"]
layout_mode = 2
size_flags_vertical = 3

[node name="Bottom" type="HBoxContainer" parent="CanvasLayer/MarginContainer/Screen"]
layout_mode = 2

[node name="PlayerHand" parent="CanvasLayer/MarginContainer/Screen/Bottom" instance=ExtResource("1_ig7tw")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8

[node name="PlayerResources" type="HBoxContainer" parent="CanvasLayer/MarginContainer/Screen/Bottom"]
layout_mode = 2
